--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,26 +1,45 @@
-version: '2'
+version: '3.7'
+
 services:
   nginx:
-    image : nginx:stable
-    restart: always
-    volumes:
-      - ./nginx/nginx-vhost.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./nginx/certificates:/mycerts 
+    restart: unless-stopped
+    image: nginx:latest
     ports:
-      - 443:443
-      - 80:80
-    depends_on:
-      - app
-  db:
-    image: mariadb
-    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
-    restart: always
+    - 80:80
+    - 443:443
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     volumes:
-      - /data/nextcloud_db:/var/lib/mysql
-    env_file:
-      - .env.db
-  app:
-    image: nextcloud
-    restart: always
-    depends_on:
-      - db
+    - ./nginx/conf.d:/etc/nginx/conf.d:ro
+    - ./nginx/certbot:/etc/nginx/certbot:ro
+    - ./certbot/conf:/etc/letsencrypt:rw
+    - ./certbot/www:/var/www/certbot:rw
+    - ./nextcloud:/var/www/html:ro
+    - ./logs/nginx:/var/log/nginx
+  certbot:
+    restart: unless-stopped
+    image: certbot/certbot:latest
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    volumes:
+    - /etc/localtime:/etc/localtime:ro
+    - ./certbot/conf:/etc/letsencrypt:rw
+    - ./certbot/www:/var/www/certbot:rw
+  nextcloud:
+    restart: unless-stopped
+    image: nextcloud:fpm-alpine
+    ports:
+    - "127.0.0.1:9000:9000"
+    volumes:
+    - ./nextcloud:/var/www/html:rw
+  mariadb:
+    restart: unless-stopped
+    image: mariadb:latest
+    # ports:
+    # - 127.0.0.1:3306:3306
+    volumes:
+    - ./databases/mariadb:/var/lib/mysql
+    environment:
+    - MYSQL_ROOT_PASSWORD=rootroot
+    - MYSQL_ROOT_HOST=%
+    - MYSQL_DATABASE=nextcloud
+    - MYSQL_USER=nextcloud
+    - MYSQL_PASSWORD=nextcloud_pass
