--- a/configs/nginx/conf.d/default.conf
+++ b/configs/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    server_name 167.71.62.155;
+    server_name 65.108.4.155;
 
     # listen              443 ssl;
     # listen              [::]:443 ssl;
@@ -40,6 +40,7 @@ server {
     add_header X-Download-Options noopen;
     add_header X-Permitted-Cross-Domain-Policies none;
     add_header Referrer-Policy no-referrer;
+    server_tokens off;
 
     root /var/www/html;
 
