--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3.9'
 
 services:
   nginx:
@@ -9,20 +9,27 @@ services:
     - 443:443
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     volumes:
-    - ./nginx/conf.d:/etc/nginx/conf.d:ro
-    - ./nginx/certbot:/etc/nginx/certbot:ro
-    - ./certbot/conf:/etc/letsencrypt:rw
-    - ./certbot/www:/var/www/certbot:rw
-    - ./nextcloud:/var/www/html:ro
-    - ./logs/nginx:/var/log/nginx
-  certbot:
-    restart: unless-stopped
-    image: certbot/certbot:latest
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-    volumes:
-    - /etc/localtime:/etc/localtime:ro
-    - ./certbot/conf:/etc/letsencrypt:rw
-    - ./certbot/www:/var/www/certbot:rw
+      - ./configs/nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./configs/nginx/certbot:/etc/nginx/certbot:ro
+      - ./configs/certbot/conf:/etc/letsencrypt:rw
+      - ./configs/certbot/www:/var/www/certbot:rw
+      - ./nextcloud:/var/www/html:ro
+      - ./logs/nginx:/var/log/nginx
+      # - ./nginx/certs:/etc/ssl/certs
+      # - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      # - ./nginx/certbot:/etc/nginx/certbot:ro
+      # - ./certbot/conf:/etc/letsencrypt:rw
+      # - ./certbot/www:/var/www/certbot:rw
+      # - ./nextcloud:/var/www/html:ro
+      # - ./logs/nginx:/var/log/nginx
+  # certbot:
+  #   restart: unless-stopped
+  #   image: certbot/certbot:latest
+  #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+  #   volumes:
+  #     - /etc/localtime:/etc/localtime:ro
+  #     - ./certbot/conf:/etc/letsencrypt:rw
+  #     - ./certbot/www:/var/www/certbot:rw
   nextcloud:
     restart: unless-stopped
     image: nextcloud:fpm-alpine
@@ -33,13 +40,7 @@ services:
   mariadb:
     restart: unless-stopped
     image: mariadb:latest
-    # ports:
-    # - 127.0.0.1:3306:3306
     volumes:
-    - ./databases/mariadb:/var/lib/mysql
-    environment:
-    - MYSQL_ROOT_PASSWORD=rootroot
-    - MYSQL_ROOT_HOST=%
-    - MYSQL_DATABASE=nextcloud
-    - MYSQL_USER=nextcloud
-    - MYSQL_PASSWORD=nextcloud_pass
+      - ./databases/mariadb:/var/lib/mysql
+    env_file:
+      - .env
