--- a/.env.db.dev
+++ b/.env.db.dev
@@ -1,5 +1,4 @@
-MYSQL_ROOT_PASSWORD=rootroot
-MYSQL_ROOT_HOST=%
-MYSQL_DATABASE=nextcloud
-MYSQL_USER=nextcloud
-MYSQL_PASSWORD=nextcloud_pass
+POSTGRES_DB=nextcloud
+POSTGRES_USER=nextcloud
+POSTGRES_PASSWORD=hfyy636dHHG155@mmf7
+POSTGRES_HOST=db
