--- a/configs/nginx/conf.d/default.conf
+++ b/configs/nginx/conf.d/default.conf
@@ -1,19 +1,29 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name 65.108.4.155;
+    # listen 80 default_server;
+    # listen [::]:80 default_server;
+    # server_name 65.108.4.155;
+
+    listen 443 ssl;
+    server_name cloud.vkhnychenko.ru www.cloud.vkhnychenko.ru;
+
+    ssl_certificate /etc/ssl/certs/cert.crt;
+    ssl_certificate_key /etc/ssl/certs/key.key;
+
+    ssl_session_cache   shared:SSL:10m;
+    ssl_session_timeout 10m;
+    keepalive_timeout 70;
 
     # listen              443 ssl;
     # listen              [::]:443 ssl;
     # ssl_certificate     /etc/letsencrypt/live/example.com/fullchain.pem;
     # ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
 
-    include /etc/nginx/certbot/options-ssl-nginx.conf;
-    ssl_dhparam /etc/nginx/certbot/ssl-dhparams.pem;
+    # include /etc/nginx/certbot/options-ssl-nginx.conf;
+    # ssl_dhparam /etc/nginx/certbot/ssl-dhparams.pem;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+    # location /.well-known/acme-challenge/ {
+    #     root /var/www/certbot;
+    # }
 
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
