--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,8 +34,8 @@ services:
   nextcloud:
     image: nextcloud:fpm
     restart: unless-stopped
-    # ports:
-    #   - "127.0.0.1:9000:9000"
+    ports:
+      - "127.0.0.1:9000:9000"
     volumes:
       - ./nextcloud:/var/www/html:rw
     env_file:
