--- a/configs/nginx/conf.d/default.conf
+++ b/configs/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
-    # listen 80 default_server;
-    # listen [::]:80 default_server;
-    # server_name 65.108.4.155;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name 65.108.4.155;
 
     listen 443 ssl;
     server_name cloud.vkhnychenko.ru www.cloud.vkhnychenko.ru;
