--- a/configs/nginx/conf.d/default.conf
+++ b/configs/nginx/conf.d/default.conf
@@ -9,16 +9,14 @@ server {
     ssl_certificate /etc/ssl/certs/cert.crt;
     ssl_certificate_key /etc/ssl/certs/key.key;
 
-    ssl_session_cache   shared:SSL:10m;
-    ssl_session_timeout 10m;
     keepalive_timeout 70;
 
-    # include /etc/nginx/certbot/options-ssl-nginx.conf;
-    # ssl_dhparam /etc/nginx/certbot/ssl-dhparams.pem;
+    include /etc/nginx/certbot/options-ssl-nginx.conf;
+    ssl_dhparam /etc/nginx/certbot/ssl-dhparams.pem;
 
-    # location /.well-known/acme-challenge/ {
-    #     root /var/www/certbot;
-    # }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
