--- a/configs/nginx/conf.d/default.conf
+++ b/configs/nginx/conf.d/default.conf
@@ -3,11 +3,10 @@ server {
     listen [::]:80 default_server;
     server_name 65.108.4.155;
 
-    listen 444 ssl;
-    server_name cloud.vkhnychenko.ru www.cloud.vkhnychenko.ru;
-
-    ssl_certificate /etc/ssl/certs/cert.crt;
-    ssl_certificate_key /etc/ssl/certs/key.key;
+    listen              443 ssl;
+    listen              [::]:443 ssl;
+    ssl_certificate     /etc/letsencrypt/live/cloud.vkhnychenko.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cloud.vkhnychenko.ru/privkey.pem;
 
     keepalive_timeout 70;
 
