--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,14 +17,14 @@ services:
       - ./logs/nginx:/var/log/nginx
     depends_on:
       - nextcloud
-  certbot:
-    restart: unless-stopped
-    image: certbot/certbot:latest
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ./certbot/conf:/etc/letsencrypt:rw
-      - ./certbot/www:/var/www/certbot:rw
+  # certbot:
+  #   restart: unless-stopped
+  #   image: certbot/certbot:latest
+  #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+  #   volumes:
+  #     - /etc/localtime:/etc/localtime:ro
+  #     - ./certbot/conf:/etc/letsencrypt:rw
+  #     - ./certbot/www:/var/www/certbot:rw
   db:
     image: postgres
     restart: unless-stopped
