--- a/configs/nginx/conf.d/default.conf
+++ b/configs/nginx/conf.d/default.conf
@@ -3,15 +3,15 @@ server {
     listen [::]:80 default_server;
     server_name 65.108.4.155;
 
-    listen              443 ssl;
-    listen              [::]:443 ssl;
-    ssl_certificate     /etc/letsencrypt/live/cloud.vkhnychenko.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/cloud.vkhnychenko.ru/privkey.pem;
+    # listen              443 ssl;
+    # listen              [::]:443 ssl;
+    # ssl_certificate     /etc/letsencrypt/live/cloud.vkhnychenko.ru/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/cloud.vkhnychenko.ru/privkey.pem;
 
     keepalive_timeout 70;
 
-    include /etc/nginx/certbot/options-ssl-nginx.conf;
-    ssl_dhparam /etc/nginx/certbot/ssl-dhparams.pem;
+    # include /etc/nginx/certbot/options-ssl-nginx.conf;
+    # ssl_dhparam /etc/nginx/certbot/ssl-dhparams.pem;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
