--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,26 +5,26 @@ services:
     restart: unless-stopped
     image: nginx:latest
     ports:
-    - 8303:80
-    - 444:444
+    - 80:80
+    # - 444:444
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     volumes:
       - ./configs/nginx/conf.d:/etc/nginx/conf.d:ro
-      - ./configs/nginx/certbot:/etc/nginx/certbot:ro
-      - ./configs/certbot/conf:/etc/letsencrypt:rw
-      - ./configs/certbot/www:/var/www/certbot:rw
+      # - ./configs/nginx/certbot:/etc/nginx/certbot:ro
+      # - ./configs/certbot/conf:/etc/letsencrypt:rw
+      # - ./configs/certbot/www:/var/www/certbot:rw
       - ./nextcloud:/var/www/html:ro
       - ./logs/nginx:/var/log/nginx
     depends_on:
       - nextcloud
-  certbot:
-    restart: unless-stopped
-    image: certbot/certbot:latest
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - ./certbot/conf:/etc/letsencrypt:rw
-      - ./certbot/www:/var/www/certbot:rw
+  # certbot:
+  #   restart: unless-stopped
+  #   image: certbot/certbot:latest
+  #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+  #   volumes:
+  #     - /etc/localtime:/etc/localtime:ro
+  #     - ./certbot/conf:/etc/letsencrypt:rw
+  #     - ./certbot/www:/var/www/certbot:rw
   db:
     image: postgres
     restart: unless-stopped
